Fix T48753: VSE must restart for international fonts